updated multi sample methods

--- a/demo/03. MultiSampleMethods/01. Sequence Manager.ipynb
+++ b/demo/03. MultiSampleMethods/01. Sequence Manager.ipynb
@@ -30,13 +30,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -50,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = os.path.join(os.path.abspath(os.path.join(os.path.join(os.getcwd(),\"..\"),\"..\")),'tests','integration','fixtures')\n",
+    "data_dir = os.path.join(os.path.abspath(os.path.join(os.path.join(os.getcwd(),\"..\"),\"..\")),'tests','fixtures')\n",
     "dataset_file = os.path.join(data_dir, 'QCB_22May19_1.p')\n",
     "dataset = load_obj(dataset_file)\n",
     "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fragmentation.p'))"
@@ -174,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +177,8 @@
     "                  'min_length':1,\n",
     "                  'min_intensity':0,\n",
     "                  'start_rt':0,\n",
-    "                  'stop_rt':1560}"
+    "                  'stop_rt':1560,\n",
+    "                  'n_peaks':1}"
    ]
   },
   {
@@ -196,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +236,7 @@
        "      <td>TopNController</td>\n",
        "      <td>{'ionisation_mode': 'Positive', 'N': 10, 'mz_t...</td>\n",
        "      <td>{'ionisation_mode': 'Positive', 'peak_sampler'...</td>\n",
-       "      <td>C:\\Users\\Vinny\\work\\vimms\\tests\\integration\\fi...</td>\n",
+       "      <td>C:\\Users\\Vinny\\work\\vimms\\tests\\fixtures\\QCB_2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -258,7 +252,7 @@
        "      <td>TopNController</td>\n",
        "      <td>{'ionisation_mode': 'Positive', 'N': 10, 'mz_t...</td>\n",
        "      <td>{'ionisation_mode': 'Positive', 'peak_sampler'...</td>\n",
-       "      <td>C:\\Users\\Vinny\\work\\vimms\\tests\\integration\\fi...</td>\n",
+       "      <td>C:\\Users\\Vinny\\work\\vimms\\tests\\fixtures\\QCB_2...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -285,12 +279,12 @@
        "\n",
        "                                             Dataset  \n",
        "0                                               None  \n",
-       "1  C:\\Users\\Vinny\\work\\vimms\\tests\\integration\\fi...  \n",
+       "1  C:\\Users\\Vinny\\work\\vimms\\tests\\fixtures\\QCB_2...  \n",
        "2                                               None  \n",
-       "3  C:\\Users\\Vinny\\work\\vimms\\tests\\integration\\fi...  "
+       "3  C:\\Users\\Vinny\\work\\vimms\\tests\\fixtures\\QCB_2...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +391,7 @@
        "3  {'ionisation_mode': 'Positive', 'peak_sampler'...    None  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,21 +435,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-08-21 15:46:11.457 | INFO     | vimms.SequenceManager:run:237 - Running in serial mode\n",
-      "2020-08-21 15:46:11.458 | INFO     | vimms.SequenceManager:run_controller:191 - Begun experiment: sample1\n",
-      "2020-08-21 15:46:11.659 | INFO     | vimms.SequenceManager:run_experiment:172 - Experiment already completed. Skipping...\n",
-      "2020-08-21 15:46:11.660 | INFO     | vimms.SequenceManager:run_controller:195 - Completed experiment: sample1\n",
-      "2020-08-21 15:46:11.660 | INFO     | vimms.SequenceManager:run_evaluation:205 - Started Evaluation: sample1\n",
-      "2020-08-21 15:46:11.661 | INFO     | vimms.SequenceManager:run_evaluation:207 - Completed Evaluation: sample1\n",
-      "2020-08-21 15:46:11.662 | INFO     | vimms.SequenceManager:run_serial:249 - Finished 0\n",
-      "2020-08-21 15:46:11.663 | INFO     | vimms.SequenceManager:run_controller:191 - Begun experiment: sample2\n"
+      "2020-09-03 16:10:46.757 | INFO     | vimms.SequenceManager:run:237 - Running in serial mode\n",
+      "2020-09-03 16:10:46.757 | INFO     | vimms.SequenceManager:run_controller:190 - Begun experiment: sample1\n",
+      "2020-09-03 16:10:46.960 | INFO     | vimms.SequenceManager:run_experiment:156 - {'Sample ID': {0: 'sample1'}, 'Controller Method': {0: 'TopNController'}, 'Controller Params': {0: {'ionisation_mode': 'Positive', 'N': 10, 'isolation_width': 1, 'mz_tol': 10, 'rt_tol': 30, 'min_ms1_intensity': 175000.0, 'ms1_shift': 0, 'initial_exclusion_list': None, 'ms1_agc_target': 200000, 'ms1_max_it': 250, 'ms1_collision_energy': 0, 'ms1_orbitrap_resolution': 120000, 'ms1_activation_type': 'HCD', 'ms1_mass_analyser': 'Orbitrap', 'ms1_isolation_mode': 'Quadrupole', 'ms2_agc_target': 30000, 'ms2_max_it': 100, 'ms2_collision_energy': 25, 'ms2_orbitrap_resolution': 7500, 'ms2_activation_type': 'HCD', 'ms2_mass_analyser': 'Orbitrap', 'ms2_isolation_mode': 'Quadrupole'}}, 'MassSpec Params': {0: {'ionisation_mode': 'Positive', 'peak_sampler': <vimms.DataGenerator.PeakSampler object at 0x0000021F29BFEEF0>, 'mz_noise': None, 'intensity_noise': None, 'isolation_transition_window': 'rectangular', 'isolation_transition_window_params': None, 'scan_duration_dict': {1: 0.4, 2: 0.2}}}, 'Dataset': {0: 'C:\\\\Users\\\\Vinny\\\\work\\\\vimms\\\\tests\\\\fixtures\\\\QCB_22May19_1.p'}}\n",
+      "(1440.000s) ms_level=1 N=10 DEW=30: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000813/1440 [00:28<00:00, 49.65it/s]\n",
+      "2020-09-03 16:11:29.520 | INFO     | vimms.SequenceManager:run_controller:194 - Completed experiment: sample1\n",
+      "2020-09-03 16:11:29.522 | INFO     | vimms.SequenceManager:run_evaluation:204 - Started Evaluation: sample1\n",
+      "2020-09-03 16:11:29.522 | INFO     | vimms.SequenceManager:run_evaluation:206 - Completed Evaluation: sample1\n",
+      "2020-09-03 16:11:29.523 | INFO     | vimms.SequenceManager:run_serial:249 - Finished 0\n",
+      "2020-09-03 16:11:29.524 | INFO     | vimms.SequenceManager:run_controller:190 - Begun experiment: sample2\n"
      ]
     },
     {
@@ -469,12 +464,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-08-21 15:46:11.866 | INFO     | vimms.SequenceManager:run_experiment:158 - {'Sample ID': {1: 'sample2'}, 'Controller Method': {1: 'TopNController'}, 'Controller Params': {1: {'ionisation_mode': 'Positive', 'N': 10, 'isolation_width': 1, 'mz_tol': 10, 'rt_tol': 30, 'min_ms1_intensity': 175000.0, 'ms1_shift': 0, 'ms1_agc_target': 200000, 'ms1_max_it': 250, 'ms1_collision_energy': 0, 'ms1_orbitrap_resolution': 120000, 'ms1_activation_type': 'HCD', 'ms1_mass_analyser': 'Orbitrap', 'ms1_isolation_mode': 'Quadupole', 'ms2_agc_target': 30000, 'ms2_max_it': 100, 'ms2_collision_energy': 25, 'ms2_orbitrap_resolution': 7500, 'ms2_activation_type': 'HCD', 'ms2_mass_analyser': 'Orbitrap', 'ms2_isolation_mode': 'Quadupole'}}, 'MassSpec Params': {1: {'ionisation_mode': 'Positive', 'peak_sampler': <vimms.DataGenerator.PeakSampler object at 0x00000206C55E9198>, 'mz_noise': None, 'intensity_noise': None, 'isolation_transition_window': 'rectangular', 'isolation_transition_window_params': None, 'scan_duration_dict': {1: 0.4, 2: 0.2}}}, 'Dataset': {1: 'C:\\\\Users\\\\Vinny\\\\work\\\\vimms\\\\tests\\\\integration\\\\fixtures\\\\QCB_22May19_1.p'}}\n",
-      "(1440.000s) ms_level=1 N=10 DEW=30: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000813/1440 [00:36<00:00, 39.75it/s]\n",
-      "2020-08-21 15:46:58.102 | INFO     | vimms.SequenceManager:run_controller:195 - Completed experiment: sample2\n",
-      "2020-08-21 15:46:58.104 | INFO     | vimms.SequenceManager:run_evaluation:205 - Started Evaluation: sample2\n",
-      "2020-08-21 15:46:58.104 | INFO     | vimms.SequenceManager:run_evaluation:207 - Completed Evaluation: sample2\n",
-      "2020-08-21 15:46:58.105 | INFO     | vimms.SequenceManager:run_serial:249 - Finished 1\n"
+      "2020-09-03 16:11:29.727 | INFO     | vimms.SequenceManager:run_experiment:156 - {'Sample ID': {1: 'sample2'}, 'Controller Method': {1: 'TopNController'}, 'Controller Params': {1: {'ionisation_mode': 'Positive', 'N': 10, 'isolation_width': 1, 'mz_tol': 10, 'rt_tol': 30, 'min_ms1_intensity': 175000.0, 'ms1_shift': 0, 'initial_exclusion_list': None, 'ms1_agc_target': 200000, 'ms1_max_it': 250, 'ms1_collision_energy': 0, 'ms1_orbitrap_resolution': 120000, 'ms1_activation_type': 'HCD', 'ms1_mass_analyser': 'Orbitrap', 'ms1_isolation_mode': 'Quadrupole', 'ms2_agc_target': 30000, 'ms2_max_it': 100, 'ms2_collision_energy': 25, 'ms2_orbitrap_resolution': 7500, 'ms2_activation_type': 'HCD', 'ms2_mass_analyser': 'Orbitrap', 'ms2_isolation_mode': 'Quadrupole'}}, 'MassSpec Params': {1: {'ionisation_mode': 'Positive', 'peak_sampler': <vimms.DataGenerator.PeakSampler object at 0x0000021F29BFEEF0>, 'mz_noise': None, 'intensity_noise': None, 'isolation_transition_window': 'rectangular', 'isolation_transition_window_params': None, 'scan_duration_dict': {1: 0.4, 2: 0.2}}}, 'Dataset': {1: 'C:\\\\Users\\\\Vinny\\\\work\\\\vimms\\\\tests\\\\fixtures\\\\QCB_22May19_1.p'}}\n",
+      "(1440.000s) ms_level=1 N=10 DEW=30: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000813/1440 [00:33<00:00, 42.59it/s]\n",
+      "2020-09-03 16:12:13.387 | INFO     | vimms.SequenceManager:run_controller:194 - Completed experiment: sample2\n",
+      "2020-09-03 16:12:13.388 | INFO     | vimms.SequenceManager:run_evaluation:204 - Started Evaluation: sample2\n",
+      "2020-09-03 16:12:13.389 | INFO     | vimms.SequenceManager:run_evaluation:206 - Completed Evaluation: sample2\n",
+      "2020-09-03 16:12:13.390 | INFO     | vimms.SequenceManager:run_serial:249 - Finished 1\n"
      ]
     },
     {
@@ -635,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,13 +648,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'min_ms1_intensity': 175000.0, 'mz_tol': 5, 'mz_units': 'ppm', 'min_length': 1, 'min_intensity': 0, 'start_rt': 0, 'stop_rt': 1560, 'n_peaks': 1}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-09-03 16:42:42.362 | INFO     | vimms.Roi:__init__:416 - Found 267115 ROIs above thresholds\n",
+      "2020-09-03 16:42:42.363 | INFO     | vimms.Common:save_obj:161 - Saving <class 'list'> to C:\\Users\\Vinny\\work\\vimms\\demo\\01. Data\\example_data\\beers\\fullscan\\mzML\\Beer_multibeers_1_fullscan1.p\n",
+      "2020-09-03 16:43:14.080 | INFO     | vimms.Common:save_obj:161 - Saving <class 'list'> to C:\\Users\\Vinny\\work\\vimms\\demo\\03. MultiSampleMethods\\results\\sequence_manager_example_2\\Beer_multibeers_1_fullscan1.p\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'min_ms1_intensity': 175000.0, 'mz_tol': 5, 'mz_units': 'ppm', 'min_length': 1, 'min_intensity': 0, 'start_rt': 0, 'stop_rt': 1560, 'n_peaks': 1}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-09-03 16:52:34.809 | INFO     | vimms.Roi:__init__:416 - Found 267115 ROIs above thresholds\n",
+      "2020-09-03 16:52:34.811 | INFO     | vimms.Common:save_obj:161 - Saving <class 'list'> to C:\\Users\\Vinny\\work\\vimms\\demo\\01. Data\\example_data\\beers\\fullscan\\mzML\\Beer_multibeers_1_fullscan1.p\n",
+      "2020-09-03 16:53:07.956 | INFO     | vimms.Common:save_obj:161 - Saving <class 'list'> to C:\\Users\\Vinny\\work\\vimms\\demo\\03. MultiSampleMethods\\results\\sequence_manager_example_2\\Beer_multibeers_1_fullscan1.p\n",
+      "2020-09-03 16:53:38.919 | INFO     | vimms.SequenceManager:run:237 - Running in serial mode\n",
+      "2020-09-03 16:53:38.920 | INFO     | vimms.SequenceManager:run_controller:190 - Begun experiment: sample1\n",
+      "2020-09-03 16:53:39.122 | INFO     | vimms.SequenceManager:run_experiment:156 - {'Sample ID': {0: 'sample1'}, 'Controller Method': {0: 'TopNController'}, 'Controller Params': {0: {'ionisation_mode': 'Positive', 'N': 10, 'isolation_width': 1, 'mz_tol': 10, 'rt_tol': 30, 'min_ms1_intensity': 175000.0, 'ms1_shift': 0, 'initial_exclusion_list': None, 'ms1_agc_target': 200000, 'ms1_max_it': 250, 'ms1_collision_energy': 0, 'ms1_orbitrap_resolution': 120000, 'ms1_activation_type': 'HCD', 'ms1_mass_analyser': 'Orbitrap', 'ms1_isolation_mode': 'Quadrupole', 'ms2_agc_target': 30000, 'ms2_max_it': 100, 'ms2_collision_energy': 25, 'ms2_orbitrap_resolution': 7500, 'ms2_activation_type': 'HCD', 'ms2_mass_analyser': 'Orbitrap', 'ms2_isolation_mode': 'Quadrupole'}}, 'MassSpec Params': {0: {'ionisation_mode': 'Positive', 'peak_sampler': <vimms.DataGenerator.PeakSampler object at 0x0000021F29BFEEF0>, 'mz_noise': None, 'intensity_noise': None, 'isolation_transition_window': 'rectangular', 'isolation_transition_window_params': None, 'scan_duration_dict': {1: 0.4, 2: 0.2}}}, 'Dataset': {0: 'C:\\\\Users\\\\Vinny\\\\work\\\\vimms\\\\demo\\\\03. MultiSampleMethods\\\\results\\\\sequence_manager_example_2\\\\Beer_multibeers_1_fullscan1.p'}}\n",
+      "(1440.000s) ms_level=2 N=10 DEW=30: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8000000001648/1440 [02:39<00:00,  9.01it/s]\n",
+      "2020-09-03 16:56:44.613 | INFO     | vimms.SequenceManager:run_controller:194 - Completed experiment: sample1\n",
+      "2020-09-03 16:56:44.614 | INFO     | vimms.SequenceManager:run_evaluation:204 - Started Evaluation: sample1\n",
+      "2020-09-03 16:56:44.615 | INFO     | vimms.SequenceManager:run_evaluation:206 - Completed Evaluation: sample1\n",
+      "2020-09-03 16:56:44.615 | INFO     | vimms.SequenceManager:run_serial:249 - Finished 0\n",
+      "2020-09-03 16:56:44.616 | INFO     | vimms.SequenceManager:run_controller:190 - Begun experiment: sample2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-09-03 16:56:44.819 | INFO     | vimms.SequenceManager:run_experiment:156 - {'Sample ID': {1: 'sample2'}, 'Controller Method': {1: 'TopNController'}, 'Controller Params': {1: {'ionisation_mode': 'Positive', 'N': 10, 'isolation_width': 1, 'mz_tol': 10, 'rt_tol': 30, 'min_ms1_intensity': 175000.0, 'ms1_shift': 0, 'initial_exclusion_list': None, 'ms1_agc_target': 200000, 'ms1_max_it': 250, 'ms1_collision_energy': 0, 'ms1_orbitrap_resolution': 120000, 'ms1_activation_type': 'HCD', 'ms1_mass_analyser': 'Orbitrap', 'ms1_isolation_mode': 'Quadrupole', 'ms2_agc_target': 30000, 'ms2_max_it': 100, 'ms2_collision_energy': 25, 'ms2_orbitrap_resolution': 7500, 'ms2_activation_type': 'HCD', 'ms2_mass_analyser': 'Orbitrap', 'ms2_isolation_mode': 'Quadrupole'}}, 'MassSpec Params': {1: {'ionisation_mode': 'Positive', 'peak_sampler': <vimms.DataGenerator.PeakSampler object at 0x0000021F29BFEEF0>, 'mz_noise': None, 'intensity_noise': None, 'isolation_transition_window': 'rectangular', 'isolation_transition_window_params': None, 'scan_duration_dict': {1: 0.4, 2: 0.2}}}, 'Dataset': {1: 'C:\\\\Users\\\\Vinny\\\\work\\\\vimms\\\\demo\\\\03. MultiSampleMethods\\\\results\\\\sequence_manager_example_2\\\\Beer_multibeers_1_fullscan1.p'}}\n",
+      "(1440.000s) ms_level=2 N=10 DEW=30: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8000000001648/1440 [02:36<00:00,  9.20it/s]\n",
+      "2020-09-03 16:59:46.826 | INFO     | vimms.SequenceManager:run_controller:194 - Completed experiment: sample2\n",
+      "2020-09-03 16:59:46.827 | INFO     | vimms.SequenceManager:run_evaluation:204 - Started Evaluation: sample2\n",
+      "2020-09-03 16:59:46.828 | INFO     | vimms.SequenceManager:run_evaluation:206 - Completed Evaluation: sample2\n",
+      "2020-09-03 16:59:46.828 | INFO     | vimms.SequenceManager:run_serial:249 - Finished 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "vsm = VimmsSequenceManager(controller_schedule2, evaluation_methods, output_dir, ms1_picked_peaks_file=None, progress_bar=True, mzmine_command=mzmine_command)\n",
     "experiment = BasicExperiment(vsm, parallel=parallel, mzml_file_list=mzml_file_list, MZML2CHEMS_DICT=MZML2CHEMS_DICT, ps=ps)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
